@@ -1,3 +1,7 @@
+Tue, Dec 9, 2008
+---------------------------------------------------------------------
+- Implemented [Campaing/New] with dates validation and status set.
+
 Mon, Dec 8, 2008
 ---------------------------------------------------------------------
 - More work polishing campaigns.
